--- a/settings.gradle
+++ b/settings.gradle
@@ -24,5 +24,5 @@ dependencyResolutionManagement {
         }
     }
 }
-rootProject.name = "Best Status and Quotes -Sathwara InfoTech"
+rootProject.name = "MoreChat"
 include ':app'
