--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,13 @@
             android:exported="false"/>
         <activity
             android:name=".Activity.MakerActivity"
-            android:exported="false"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Activity.ImagePickerActivity"
             android:exported="false"/>
@@ -64,11 +70,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.BestStatusAndQuotesYMGDevelopers.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <meta-data
             android:name="preloaded_fonts"
